--- a/style.css
+++ b/style.css
@@ -40,9 +40,62 @@ header{
     background-color: rgba(0,0,0,0.3);
     padding: 30px 0;
     border-radius: 10%;
+    text-align: center;
+    color: white;
+    align-content: center;
+    padding-left: 200px;
 
 }
 img{
     height: 250px;
     border-radius: 70px;
+}
+#about{
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(img/nature.jpg);
+    height: 50vh;
+    background-size: cover;
+    background-position: center; 
+    text-align: center;
+    color: white;
+
+}
+.about-content {
+    height: 50vh;
+    padding-top: 400px;
+    background-color: rgba(0,0,0,0.3);
+    padding: 30px 0;
+    border-radius: 10%;
+    text-align: center;
+    color: white;
+    align-content: center;
+    padding-left: 100px;
+}
+#contact{
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(img/nature.jpg);
+    height: 70vh;
+    background-size: cover;
+    background-position: center; 
+    text-align: center;
+    color: white;
+    
+}
+.contact-details-area{
+    height: 70vh;
+    padding-top: 400px;
+    background-color: rgba(0,0,0,0.3);
+    padding: 30px 0;
+    border-radius: 10%;
+    text-align: center;
+    color: white;
+    align-content: center;
+    padding-left: 100px;
+}
+#contact-form{
+    background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(img/nature.jpg);
+    height: 50vh;
+    background-size: cover;
+    background-position: center; 
+    text-align: center;
+    color: white;
+    
 }
