--- a/style.css
+++ b/style.css
@@ -90,6 +90,14 @@ img{
     align-content: center;
     padding-left: 100px;
 }
+.contact-details{
+    background-color: rgba(0,0,0,0.3);
+    padding: 30px 0;
+    border-radius: 10%;
+    text-align: center;
+    color: white;
+    align-content: center;
+}
 #contact-form{
     background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(img/nature.jpg);
     height: 50vh;
